# vaccine_prevention

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  setup.cfg
core/core/: settings.py  urls.py
core/frontend/: package-lock.json
core/vaccina/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
core/vaccina/migrations/: 0001_initial.py  0002_auto_20220316_2230.py  0003_auto_20220316_2232.py  0004_rename_date_of_birth_employee_birthday.py  0005_alter_employee_age.py  0006_alter_employee_age.py
core/vaccina/static/css/: style.css
core/vaccina/templates/: base.html
core/vaccina/templates/blocks/: footer.html
core/vaccina/templates/vaccina_page/: add_employee.html  employees.html  index.html
