[tool.poetry]
name = "vaccine_prevention"
version = "0.1.0"
description = ""
authors = ["ramilabd <ramsmart@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
